poly lines for all ways

--- a/public/polytest.html
+++ b/public/polytest.html
@@ -87,12 +87,12 @@
         });
 
         //campusPolygon.setMap(map);
-
+        fetchWalkablePath(map);
         fetchStepsData(map);
       }
 
       function fetchStepsData(map) {
-        fetch("ways_output.json")
+        fetch("stairs.json")
           .then(response => response.json())
           .then(data => {
             data.forEach(way => {
@@ -108,6 +108,31 @@
                 fillColor: "#FF0000",
                 strokeOpacity: 1.0,
                 strokeWeight: 2.0,
+              });
+
+              stepsPath.setMap(map);
+            });
+          })
+          .catch(error => console.error("Error fetching steps data:", error));
+      }
+
+      function fetchWalkablePath(map)  {
+        fetch("ways_output.json")
+          .then(response => response.json())
+          .then(data => {
+            data.forEach(way => {
+              const path = way.refs.map(ref => ({
+                lat: ref.lat / 1e9,
+                lng: ref.lon / 1e9,
+              }));
+
+              const stepsPath = new google.maps.Polyline({
+                path: path,
+                geodesic: true,
+                strokeColor: "blue",
+                fillColor: "blue",
+                strokeOpacity: 1.0,
+                strokeWeight: 1.0,
               });
 
               stepsPath.setMap(map);
