--- a/public/polytest.html
+++ b/public/polytest.html
@@ -77,7 +77,7 @@
         });
 
         // Encoded polyline string
-        const encodedPolyline = "}yuxF`rf}Lc@|CYfBB\\@NDHHJ";
+        const encodedPolyline = "atvxFvmh}LJDBHP`@BBVl@DL@F\f@JNFXN\L@F?DJIVI|@@^AHANC@EXCZEn@OxBBFDBpANPqCBe@f@AFAF@JBD?dCZR@F[DQL}BB_@Vo@NsBQAMrBGp@N@VFF?PW";
 
         // Decode the polyline string
         const decodedPath = google.maps.geometry.encoding.decodePath(encodedPolyline);
@@ -104,7 +104,7 @@
         //campusPolygon.setMap(map);
         polyline.setMap(map);
         fetchStepsData(map);
-        fetchWalkablePath(map);
+        //fetchWalkablePath(map);
       }
 
       function fetchStepsData(map) {
