--- a/public/polytest.html
+++ b/public/polytest.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -86,26 +85,60 @@
           fillColor: "#FF0000",
           fillOpacity: 0.35,
         });
-                // Encoded polyline string
-        const encodedPolyline = "s_vxFjhj}Lr@|@NfAb@hA";
+        // 1) Fetch the encoded polyline string from best_path_polyline.json
+        fetch("best_path_polyline.json") 
+          .then(response => response.json())
+          .then(data => {
+            // data.encoded_polyline is the string from djikstra.py
+            const decodedPath = google.maps.geometry.encoding.decodePath(
+              data.encoded_polyline
+            );
 
-        // Decode the polyline string
-        const decodedPath = google.maps.geometry.encoding.decodePath(encodedPolyline);
+            // 2) Draw that decoded polyline in green
+            const dijkstraLine = new google.maps.Polyline({
+              path: decodedPath,
+              geodesic: true,
+              strokeColor: "#00FF00",
+              strokeOpacity: 1.0,
+              strokeWeight: 3.0,
+            });
+            dijkstraLine.setMap(map);
+          })
+          .catch(error => console.error("Error fetching the Dijkstra polyline:", error));
 
-        // Create a polyline from the decoded path
-        const polyline = new google.maps.Polyline({
-          path: decodedPath,
-          geodesic: true,
-          strokeColor: "#0000FF", // Blue color for visibility
-          strokeOpacity: 1.0,
-          strokeWeight: 2.0,
-        });
-
-        //campusPolygon.setMap(map);
-        fetchWalkablePath(map);
-        //polyline.setMap(map);
+        // campusPolygon.setMap(map);
+        // Instead of using an encoded polyline, we now fetch and draw formatted data polylines.
+        //fetchFormattedData(map);
         fetchStepsData(map);
-        fetchWalkablePath(map);
+        polyline.setMap(map)
+        // fetchWalkablePath(map);
+      }
+
+      // New function: fetch formatted data and draw its polylines
+      function fetchFormattedData(map) {
+        fetch("formatted_data.json")
+          .then(response => response.json())
+          .then(data => {
+            data.forEach(way => {
+              way.edges.forEach(edge => {
+                const path = edge.polyline.map(point => ({
+                  lat: point.lat / 1e9,
+                  lng: point.lon / 1e9,
+                }));
+
+                const polyline = new google.maps.Polyline({
+                  path: path,
+                  geodesic: true,
+                  strokeColor: "#800080", // Purple color for visibility
+                  strokeOpacity: 1.0,
+                  strokeWeight: 2.0,
+                });
+
+                polyline.setMap(map);
+              });
+            });
+          })
+          .catch(error => console.error("Error fetching formatted data:", error));
       }
 
       function fetchStepsData(map) {
