--- a/public/polytest.html
+++ b/public/polytest.html
@@ -111,7 +111,7 @@
         fetchFormattedData(map);
         //fetchStepsData(map);
         polyline.setMap(map)
-        //fetchWalkablePath(map);
+        fetchWalkablePath(map);
       }
 
       // New function: fetch formatted data and draw its polylines
@@ -178,10 +178,10 @@
               });
             });
 
-            // Filter ways to only include those with at least one adjacent segment
-            // const filteredWays = data.filter(way =>
-            //   way.refs.some(ref => refCounts[ref.id] > 1)
-            // );
+            //Filter ways to only include those with at least one adjacent segment
+            const filteredWays = data.filter(way =>
+              way.refs.some(ref => refCounts[ref.id] > 1)
+            );
 
             // Draw each filtered way as a polyline
             ways.forEach(way => {
