--- a/public/djikstraTest.html
+++ b/public/djikstraTest.html
@@ -92,7 +92,7 @@
         fetch("best_path_polyline.json")
           .then(response => response.json())
           .then(data => {
-            // data.encoded_polyline is the string from djikstra.py
+            // data.encoded_polyline is the string from dijkstra.py
             const decodedPath = google.maps.geometry.encoding.decodePath(
               data.encoded_polyline
             );
@@ -110,7 +110,7 @@
           .catch(error => console.error("Error fetching the Dijkstra polyline:", error));
 
         // Instead of using an encoded polyline, we now fetch and draw formatted data polylines.
-        fetchFormattedData(map);
+        //fetchFormattedData(map);
         fetchStepsData(map);
         // Note: The stray call to polyline.setMap(map) has been removed as each polyline is set in its own callback
         // ***** ADD TWO MARKERS *****
